--- a/Day2/00_batch_train.ipynb
+++ b/Day2/00_batch_train.ipynb
@@ -201,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('torch')",
+   "display_name": "torch",
    "language": "python",
    "name": "python3"
   },
@@ -215,11 +215,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7288f315087fdb0a15835a979a50c8db3e0e21492381bafafe9d84f995bbb7dd"
+    "hash": "97879d2e69e7cd290b97a5297f1f5035bdddfbfb0ef00f9ed6d91c62d6551b84"
    }
   }
  },
